--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,23 +11,24 @@
 
 .game{
   width: 100%;
-  display: flex;
+  padding: 20px;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .game .board{
   display: grid;
-  grid-template-columns: 150px 150px 150px;
+  grid-template-columns: 100px 100px 100px;
 }
 
 .game .board .cell{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150px;
+  height: 100px;
   border: 1px solid #BBB;
-  font-size: 80px;
+  font-size: 50px;
   background-color: white;
 }
 
